# Webdesign-Calauator

./: .editorconfig  .gitignore  README.md  package.json
.github/workflows/: auto-update-version.yml  build-manual.yml  update-version-manual.yml
src/: font.css  index.html  main.js  store.js  styles.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/themes/: pink-purple.css
