[package]
name = "webdesign-calauator"
version = "0.3.0"
description = "A calcuator APP for web design"
authors = ["Tzuyang Tsai <shiyou0130011@gmail.com>"]
edition = "2021"
repository = "https://github.com/shiyou0130011/Webdesign-Calauator"
license-file = "../LICENSE"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "webdesign_calauator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"

